--- a/css/header.css
+++ b/css/header.css
@@ -28,6 +28,7 @@
 }
 
 .cabecalho-navegacao {
+    position: absolute;
     width: 100%;
     transform: translateY(-130%);
     transition: transform 0.2s, opacity 0.2s;
@@ -51,5 +52,4 @@
     padding: 1em;
     margin: .5em 0;
     border-radius: 5px;
-
 }
