--- a/css/main.css
+++ b/css/main.css
@@ -20,14 +20,15 @@
 }
 
 .apresentacao__text--buttton {
-    position: absolute;
     bottom: .4em;
+    margin-top: 2em;
     color: var(--cor-text);
     padding: .5em 2em;
     background-color: var(--cor-secundaria);
     border: none;
     border-radius: 5px;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .content-links__social {
@@ -68,5 +69,68 @@ a {
 .content-img__icon {
     width: 8em;
     margin-right: 5em;
-    margin-top: -3em;
+    margin-top: 1em;
+}
+
+.rodape {
+    margin-top: 2em;
+}
+
+.rodape p {
+    white-space: pre-line;
+    line-height: 1.2em;
+}
+
+@media screen and (min-width: 768px) {
+    .content-links__social {
+        flex-direction: row;
+    }
+
+    .content-img__icon{
+        width: 12em;
+        margin-top: -6em;
+        margin-right: 8em;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .content {
+        margin-top: 4em;
+        gap: 8em;
+    }
+    
+    .content-apresentacao {
+        display: flex;
+        flex-direction: row-reverse;
+        gap: 5em;
+        margin-top: 8em;
+    }
+
+    .content-links__social--info {
+        gap: 2em;
+    }
+
+    .content-links__social {
+        flex-direction: column;
+        gap: 2em;
+    }
+
+    .content-links__social--info {
+        flex-direction: column;
+    }
+
+    .apresentacao__text--buttton {
+        position: relative;
+        margin-top: 3em;
+    }
+
+    .content-img {
+        position: relative;
+    }
+
+    .content-img__icon {
+        position: relative;
+        margin: 0;
+        width: 30em;
+    }
 }
