--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@ a {
         text-align: center;
     }
     
+    .content-apresentacao__mobile {
+        margin-top: 4em;
+    }
+
     .apresentacao__text--title {
         font-size: 2.5em;
         text-align: justify;
@@ -98,6 +102,13 @@ a {
 
     .apresentacao__text--buttton {
         font-size: 16px;
+        margin-top: 3em;
+    }
+
+    .content-links {
+        display: flex;
+        justify-content: center;
+        margin-top: 5em;
     }
 
     .content-links__social {
