--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
 @import url('css/header.css');
 @import url('css/main.css');
 @import url('css/footer.css');
+@import url('css/sobre.css');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
