--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ footer, header, hgroup, menu, nav, section {
     --cor-primaria: #1a1414;
     --cor-secundaria: #c14a27;
 	--cor-text: white;
+	--branco-escuro: #FFFFFFd9;
 
 	--font-principal: 'Poppins', sans-serif;
 }
