--- a/css/sobre.css
+++ b/css/sobre.css
@@ -133,6 +133,6 @@
     transition: all 0.4s ease;
 }
 
-.main-projetos__manual .projetos__manual-btn:hover {
+/* .main-projetos__manual .projetos__manual-btn:hover {
     background-color: var(--cor-secundaria);
-}
+} */
