--- a/css/header.css
+++ b/css/header.css
@@ -72,7 +72,7 @@
     }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) {    
     .content-img__cubo {
         display: none;
     }
@@ -85,6 +85,10 @@
     .cabecalho-top__menu, 
     .cabecalho-top__emoji {
         display: none;
+    }
+
+    .cabecalho-top__link {
+        font-size: 1.5em;
     }
 
     .cabecalho-navegacao {
@@ -101,13 +105,13 @@
 
     .navegacao__list--item {
         border: none;
-        font-size: 1.5em;
+        font-size: 2em;
         cursor: pointer;
         pointer-events: auto;
     }
 
     #hidden {
         display: block;
-        width: 3em;
+        width: 4em;
     }
 }
