--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@ footer, header, hgroup, menu, nav, section {
     --cor-secundaria: #c14a27;
 	--cor-text: white;
 	--branco-escuro: #FFFFFFd9;
+	--cor-qualitys: #2a1f1f;
 
 	--font-principal: 'Poppins', sans-serif;
 }
