--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body {
 	font-family: var(--font-principal);
 	color: var(--cor-text);
 	padding: 2em; 	
+	overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
