--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,10 @@
     font-size: 12px;
 }
 
+.rodape-links {
+    margin-bottom: .5em;
+}
+
 @media screen and (min-width: 768px) {
     .rodape p {
         font-size: 1em;
