feat: finalizar página de contato para mobile

--- a/css/header.css
+++ b/css/header.css
@@ -35,6 +35,7 @@
     transition: transform 0.2s, opacity 0.2s;
     opacity: 0;
     pointer-events: none;
+    z-index: 1;
 }
 
 .cabecalho-navegacao.ativo {
