--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 @import url('css/main.css');
 @import url('css/footer.css');
 @import url('css/sobre.css');
+@import url('css/contato.css');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -53,6 +54,7 @@ body {
 	padding: 2em; 	
 	overflow-x: hidden;
 }
+
 ol, ul {
 	list-style: none;
 }
