--- a/css/contato.css
+++ b/css/contato.css
@@ -1,3 +1,7 @@
+.contato {
+    margin-top: 6em;
+}
+
 .contato-title {
     text-align: center;
     font-size: 1.4em;
@@ -6,9 +10,12 @@
 }
 
 .contato-form {
-    padding: 1em;
+    padding: 3em;
     border-radius: 10px;
     background-color: var(--cor-qualitys);
+    z-index: 1;
+    height: fit-content;
+    margin-top: 2em;
 
     & button {
         width: 100%;
@@ -26,10 +33,16 @@
     }
 }
 
+#form {
+    margin-top: 3em;
+}
+
+
 .contato-descricao {
     text-align: justify;
     margin-top: 4em;
     padding: 0 1em;
+    font-size: 1.2em;
 
     & p {
         margin-bottom: 1.2rem;
@@ -45,7 +58,7 @@
     display: flex;
     flex-direction: column;
     gap: .5em;
-    margin: 1em 0;
+    margin: 3em 0;
 }
 
 .contato-form__item--text {
@@ -62,4 +75,16 @@
 
 .contato-form__button {
     width: 1.2em;
+}
+
+@media screen and (min-width: 768px) {
+    .contato-descricao {
+        height: 50%;
+    }
+    
+    .contato-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2em;
+    }
 }
