--- a/css/contato.css
+++ b/css/contato.css
@@ -77,6 +77,13 @@
     width: 1.2em;
 }
 
+@media screen and (max-width: 428px) {
+    .contato-title {
+        font-size: 1em;
+        margin-top: 0;
+    }
+}
+
 @media screen and (min-width: 768px) {
     .contato-descricao {
         height: 50%;
