--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 @import url('css/footer.css');
 @import url('css/sobre.css');
 @import url('css/contato.css');
+@import url('css/aprendizado.css');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
