--- a/css/main.css
+++ b/css/main.css
@@ -34,15 +34,9 @@
 
 .content-links__social {
     display: flex;
-    flex-direction: column;
     gap: 1em;
     position: relative;
     margin-top: 2em;
-}
-
-.content-links__social--info {
-    display: flex;
-    gap: 1em;
 }
 
 .content-links__social--item {
@@ -84,6 +78,12 @@ a {
 .rodape p {
     white-space: pre-line;
     line-height: 1.2em;
+}
+
+@media screen and (min-width: 590px) {
+    .content-img__icon {
+        margin-top: -4em;
+    }
 }
 
 @media screen and (max-width: 428px) {
