--- a/css/contato.css
+++ b/css/contato.css
@@ -71,6 +71,7 @@
     border: 1px solid var(--branco-escuro);
     border-radius: 8px;
     padding: .8em .4em;
+    font-size: 16px;
 }
 
 .contato-form__item--text:focus,
