--- a/css/header.css
+++ b/css/header.css
@@ -61,10 +61,19 @@
     cursor: pointer;
 }
 
-.cabecalho-navegacao__list--link, 
+.cabecalho-navegacao__list--link,
 .cabecalho-top__link {
     text-decoration: none;
     color: inherit;
+}
+
+.list--item__maleta,
+.list--item__diploma {
+    width: 1.4em;
+}
+
+.list--item__contato {
+    width: 1.8em;
 }
 
 #hidden {
@@ -77,7 +86,7 @@
     }
 }
 
-@media screen and (min-width: 1024px) {    
+@media screen and (min-width: 1024px) {
     .content-img__cubo {
         display: none;
     }
@@ -87,7 +96,7 @@
         gap: 5em;
     }
 
-    .cabecalho-top__menu, 
+    .cabecalho-top__menu,
     .cabecalho-top__emoji {
         display: none;
     }
@@ -113,6 +122,70 @@
         font-size: 2em;
         cursor: pointer;
         pointer-events: auto;
+        position: relative;
+        transition: color 0.3s ease;
+    }
+
+    .navegacao__list--item::after {
+        content: "";
+        position: absolute;
+        left: 50%;
+        bottom: -4px;
+        transform: translateX(-50%) scaleX(0);
+        transform-origin: center;
+        width: 100%;
+        height: 2px;
+        background-color: var(--cor-secundaria);
+        transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .navegacao__list--item:hover::after {
+        transform: translateX(-50%) scaleX(1);
+        margin-bottom: -40px;
+    }
+
+    .list--item__text {
+        display: flex;
+        position: absolute;
+        opacity: 0;
+        color: var(--cor-secundaria);
+        bottom: -35px;
+        right: .2em;
+    }
+
+    .navegacao__list--item:hover {
+        transform: translateY(-10px);
+        transition: transform 0.2s ease;
+    }
+
+    .navegacao__list--item:hover .list--item__text {
+        opacity: 1;
+    }
+
+    .list--item__certificado {
+        display: flex;
+        position: absolute;
+        opacity: 0;
+        color: var(--cor-secundaria);
+        bottom: -35px;
+        left: -40px;
+    }
+
+    .navegacao__list--item:hover .list--item__certificado {
+        opacity: 1;
+    }
+
+    .list--item__contato--text {
+        display: flex;
+        position: absolute;
+        opacity: 0;
+        color: var(--cor-secundaria);
+        bottom: -35px;
+        left: -10px;
+    }
+
+    .navegacao__list--item:hover .list--item__contato--text {
+        opacity: 1;
     }
 
     #hidden {
