--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ body.no-scroll {
 
 .effect-saida {
     transform: rotateY(180deg);	
-	transition: transform 5s ease;
+	transition: transform 3s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
 ol, ul {
@@ -100,6 +100,7 @@ table {
 	padding: 2em;
 	height: auto;
 	perspective: 1200px;
+	box-shadow: 0 10px 30px rgba(200, 200, 200, 1);
 }
 
 @media screen and (min-width: 1024px) {
