--- a/css/sobre.css
+++ b/css/sobre.css
@@ -182,7 +182,6 @@
 .main-quality__content {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1em;
 }
 
 .main-quality__item,
@@ -268,26 +267,27 @@
             gap: .5em;
             cursor: pointer;
 
-            & #delete {
+            & .delete {
                 width: 1.2em;
             }
         }
     }
 }
 
-@media screen and (max-width: 428px) {
-    .main-quality__content {
-        gap: 2em;
-    }
+.main-quality__content {
+    gap: 1em;
+}
 
-    .main-quality__item {
-        padding-inline: 0;
-    }
+.main-quality__item {
+    padding-inline: 0;
+}
 
-    .main-quality__item {
-        width: 120%;
-        word-break: break-word;
-    }
+.main-quality__item {
+    word-break: break-word;
+}
+
+.main-sugestoes {
+    margin-top: 8em;
 }
 
 @media screen and (min-width: 768px) {
@@ -365,18 +365,24 @@
         width: 10em;
     }
 
+    .main-sugestoes {
+        margin-top: 8em;
+    }
+
+    .main-sugestoes__text--area {
+        min-height: 6em;
+        width: 100%;
+        resize: vertical;
+    }
+
     #envio {
         flex-direction: row;
 
-        & .main-sugestoes__input {
-            width: 40%;
-            border: none;
-        }
-
         & .main-sugestoes__btn {
-            height: 2.5em;
+            height: 4em;
         }
     }
+
 }
 
 @media screen and (min-width: 1024px) {
@@ -449,17 +455,27 @@
         flex-direction: row;
         margin-top: 10em;
 
-        & .main-sugestoes__input {
+        & .main-sugestoes__btn {
             height: 4em;
         }
+    }
 
-        & .main-sugestoes__btn {
-            height: 3.4em;
-        }
+    .main-sugestoes {
+        margin-top: 5em;
     }
 
     .main-sugestoes__list {
         display: grid;
         grid-template-columns: 1fr 1fr;
+    }
+
+    .main-sugestoes__text--area {
+        font-size: 1.5em;
+        min-height: 4em;
+    }
+
+    .main-sugestoes__text--area::placeholder {
+        font-size: 1.5em;
+        padding: .6em;
     }
 }
