feat: adicionar efeito hover na tag button da página index.html

--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,11 @@ a {
         position: relative;
         margin-top: 3em;
         font-size: 1.5em;
+        transition: transform 0.5s ease;
+    }
+
+    .apresentacao__text--buttton:hover {
+        transform: translateY(-10px);
     }
 
     .links__social--img {
